[gd_scene load_steps=5 format=3 uid="uid://cyvk1yvwt3und"]

[ext_resource type="Script" path="res://MainGame/main_game_tv.gd" id="1_5gq77"]
[ext_resource type="Texture2D" uid="uid://bmeb0fydo211v" path="res://textures/power_off_white.svg" id="2_1xang"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cc8yv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rsr1"]
bg_color = Color(0, 0, 0, 0.705882)

[node name="main_game_tv" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5gq77")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cc8yv")

[node name="TVBackground" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -588.5
offset_top = -334.5
offset_right = 588.5
offset_bottom = 334.5
grow_horizontal = 2
grow_vertical = 2

[node name="TopRed" type="ColorRect" parent="Background/TVBackground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 160.0
grow_horizontal = 2
color = Color(0.87451, 0, 0, 1)

[node name="Label" type="Label" parent="Background/TVBackground/TopRed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 86
text = "BREAKING NEWS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoodNEWS" type="Label" parent="Background/TVBackground"]
layout_mode = 0
offset_left = 146.0
offset_top = 195.0
offset_right = 1037.0
offset_bottom = 375.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "GOOD NEWS"
autowrap_mode = 2

[node name="BadNEWS" type="Label" parent="Background/TVBackground"]
layout_mode = 0
offset_left = 144.0
offset_top = 379.0
offset_right = 1035.0
offset_bottom = 559.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "BAD NEWS"
autowrap_mode = 2

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -130.0
offset_right = 180.0
offset_bottom = -50.0
grow_vertical = 0
icon = ExtResource("2_1xang")
expand_icon = true

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7rsr1")

[node name="TutorialTEXT" type="Label" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -201.0
offset_right = 378.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "These are the breaking news. 
Here you can see if a company is doing good or bad.

If a company is doing good it's stock should increase, and vice versa if the company is doing bad."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Click" type="Label" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -298.0
offset_top = -75.0
offset_right = 298.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "*Left Click to Continue*"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
